--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
   <script>
     // Initialize Firebase
     var config = {
-      apiKey: "AIzaSyAHtEujujiunzXn84lQedM0AHA0smYUB2c",
-      authDomain: "read-later-service.firebaseapp.com",
-      databaseURL: "https://read-later-service.firebaseio.com",
+      apiKey: "AIzaSyCi1MITSbKYms5RNxHVuVFXE_K5oVUbBlM",
+      authDomain: "newp-5d5d2.firebaseapp.com",
+      databaseURL: "https://newp-5d5d2.firebaseio.com",
     };
     firebase.initializeApp(config);
   </script>
